# Grupo2-Marketplace-con-Rust

./: .gitignore  Cargo.toml  tarpaulin-report.html
marketplace_principal/: Cargo.toml  lib.rs
reportes_view/: Cargo.toml  lib.rs
