[package]
name = "marketplace_principal"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
parity-scale-codec = { version = "3.6", features = ["derive"], default-features = false }
scale-info = { version = "2.11", features = ["derive"], default-features = false }


[dev-dependencies]
# ink_e2e = { version = "5.0.0" } # Asegúrate de que esta línea esté comentada o eliminada

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "scale-info/std"
]
ink-as-dependency = []
e2e-tests = []

